--- a/index.html
+++ b/index.html
@@ -234,8 +234,10 @@
                         </div>
                         <div class="home-benefits-card home-benefits-card-bg-3">
                             <img src="./img/home_consorcio/overlay-dark.png" class="home-benefits-card-overlay">
-                            <h5>Por que Apolar?</h5>
-                            <p>Oferecemos créditos personalizados para atender às suas necessidades, variando de 100 mil a 3 milhões.</p>
+                            <h5>Alto índice de
+                                contemplação?
+                            </h5>
+                            <p>Devido a gestão e a saúde financeira dos grupos, Nós contemplamos acima da média do mercado. Isso quer dizer que você estará mais próximo de realizar seu sonho do que imagina!</p>
                             <a href="" class="home-benefits-card-button">
                                 Saiba mais
                                 <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -801,7 +803,7 @@
                                     </svg>                                    
                                     <h1>+<span id="counter-2">3.000.000</span></h1>
                                     <h5>
-                                        Oferecemos créditos personalizados para atender às suas necessidades, variando de 100 mil a 3 milhões.
+                                        Créditos de 100 mil a 3 milhões.
                                     </h5>
                                 </div>
                                 <div class="home-whyapolar-counter-item-bloc">
@@ -818,7 +820,7 @@
                                     </svg>                                    
                                     <h1>+<span id="counter-3">50</span></h1>
                                     <h5>
-                                        anos de experiência
+                                        Anos de experiência no mercado imobiliário
                                     </h5>
                                 </div>
                             </div>
