--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
     <header class="header-default">
-        <nav class="navbar navbar-expand-lg ">
+        <nav class="navbar navbar-expand-lg container">
             <a class="navbar-brand" href="#"><img src="./img/home_announce/logo_header.png"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
