--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                 <svg class="did-you-know-card-arrow" width="94" height="42" viewBox="0 0 94 42" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M93.5 0.290646L0 41.2095L16 0.290647L93.5 0.290646Z" fill="#312C73"/>
                                 </svg>
-                                <div class="did-you-know-card-block">
+                                <div class="did-you-know-card-block card-shadow">
                                     <div class="steps-section-bell">
                                         <svg class="did-you-know-card-bell" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <g clip-path="url(#clip0_5395_2471)">
@@ -255,49 +255,49 @@
                         <div class="col-xl-9">
                             <div class="row">
                                 <div class="col-xl-3 col-md-6 advantages-card">
-                                    <div class="advantages-card-block">
+                                    <div class="advantages-card-block card-shadow-two">
                                         <img class="advantages-card-image" src="img/home_announce/icons/agility.svg" alt="">
                                         <h5 class="advantages-card-description">Agilidade na locação ou venda do imóvel</h5>
                                     </div>
                                 </div>
                                 <div class="col-xl-3 col-md-6 advantages-card">
-                                    <div class="advantages-card-block">
+                                    <div class="advantages-card-block card-shadow-two">
                                         <img class="advantages-card-image" src="img/home_announce/icons/solutions.svg" alt="">
                                         <h5 class="advantages-card-description">Soluções personalizadas de acordo com o seu imóvel</h5>
                                     </div>
                                 </div>
                                 <div class="col-xl-3 col-md-6 advantages-card">
-                                    <div class="advantages-card-block">
+                                    <div class="advantages-card-block card-shadow-two">
                                         <img class="advantages-card-image" src="img/home_announce/icons/divulgation.svg" alt="">
                                         <h5 class="advantages-card-description">Divulgação eficaz</h5>
                                     </div>
                                 </div>
                                 <div class="col-xl-3 col-md-6 advantages-card">
-                                    <div class="advantages-card-block">
+                                    <div class="advantages-card-block card-shadow-two">
                                         <img class="advantages-card-image" src="img/home_announce/icons/consultancy.svg" alt="">
                                         <h5 class="advantages-card-description">Assessoria jurídica especializada no setor</h5>
                                     </div>
                                 </div>
                                 <div class="col-xl-3 col-md-6 advantages-card advantages-card-bottom">
-                                    <div class="advantages-card-block">
+                                    <div class="advantages-card-block card-shadow-two">
                                         <img class="advantages-card-image" src="img/home_announce/icons/franchises.svg" alt="">
                                         <h5 class="advantages-card-description">+70 franquias trabalhando na venda do seu imóvel</h5>
                                     </div>
                                 </div>
                                 <div class="col-xl-3 col-md-6 advantages-card advantages-card-bottom">
-                                    <div class="advantages-card-block">
+                                    <div class="advantages-card-block card-shadow-two">
                                         <img class="advantages-card-image" src="img/home_announce/icons/announcement.svg" alt="">
                                         <h5 class="advantages-card-description">Anúncios 100% gratuitos</h5>
                                     </div>
                                 </div>
                                 <div class="col-xl-3 col-md-6 advantages-card advantages-card-bottom">
-                                    <div class="advantages-card-block">
+                                    <div class="advantages-card-block card-shadow-two">
                                         <img class="advantages-card-image" src="img/home_announce/icons/evaluation.svg" alt="">
                                         <h5 class="advantages-card-description">Avaliação do imóvel presencial e online</h5>
                                     </div>
                                 </div>
                                 <div class="col-xl-3 col-md-6 advantages-card advantages-card-bottom">
-                                    <div class="advantages-card-block">
+                                    <div class="advantages-card-block card-shadow-two">
                                         <img class="advantages-card-image" src="img/home_announce/icons/security.svg" alt="">
                                         <h5 class="advantages-card-description">Segurança e suporte direto de especialistas</h5>
                                     </div>
@@ -321,7 +321,7 @@
                     <h1 class="rent-section-title">Aluguel</h1>
                     <hr class="rent-hr">
                     <h2 class="rent-section-description">Anuncie com Apolar e garanta o máximo retorno e <br>segurança para seu imóvel!</h2>
-                    <div class="rent-counter">
+                    <div class="rent-counter card-shadow">
                         <div class="rent-counter-item">
                             <h1><span id="counter-1">12</span></h1>
                             <p>meses de aluguel <br> garantido</p>
@@ -355,49 +355,49 @@
                         <div class="col-xl-9">
                             <div class="row">
                                 <div class="col-xl-3 col-md-6 advantages-card">
-                                    <div class="advantages-card-block">
+                                    <div class="advantages-card-block card-shadow-two">
                                         <img class="advantages-card-image" src="img/home_announce/icons/agility_two.svg" alt="">
                                         <h5 class="advantages-card-description">Agilidade na locação ou venda do imóvel</h5>
                                     </div>
                                 </div>
                                 <div class="col-xl-3 col-md-6 advantages-card">
-                                    <div class="advantages-card-block">
+                                    <div class="advantages-card-block card-shadow-two">
                                         <img class="advantages-card-image" src="img/home_announce/icons/portability.svg" alt="">
                                         <h5 class="advantages-card-description">Programa de portabilidade</h5>
                                     </div>
                                 </div>
                                 <div class="col-xl-3 col-md-6 advantages-card">
-                                    <div class="advantages-card-block">
+                                    <div class="advantages-card-block card-shadow-two">
                                         <img class="advantages-card-image" src="img/home_announce/icons/divulgation.svg" alt="">
                                         <h5 class="advantages-card-description">Divulgação eficaz</h5>
                                     </div>
                                 </div>
                                 <div class="col-xl-3 col-md-6 advantages-card">
-                                    <div class="advantages-card-block">
+                                    <div class="advantages-card-block card-shadow-two">
                                         <img class="advantages-card-image" src="img/home_announce/icons/ten_options.svg" alt="">
                                         <h5 class="advantages-card-description">Assessoria jurídica especializada no setor</h5>
                                     </div>
                                 </div>
                                 <div class="col-xl-3 col-md-6 advantages-card advantages-card-bottom">
-                                    <div class="advantages-card-block">
+                                    <div class="advantages-card-block card-shadow-two">
                                         <img class="advantages-card-image" src="img/home_announce/icons/franchises.svg" alt="">
                                         <h5 class="advantages-card-description">+10 opções de fianças para locação</h5>
                                     </div>
                                 </div>
                                 <div class="col-xl-3 col-md-6 advantages-card advantages-card-bottom">
-                                    <div class="advantages-card-block">
+                                    <div class="advantages-card-block card-shadow-two">
                                         <img class="advantages-card-image" src="img/home_announce/icons/announcement.svg" alt="">
                                         <h5 class="advantages-card-description">Anúncios 100% gratuitos</h5>
                                     </div>
                                 </div>
                                 <div class="col-xl-3 col-md-6 advantages-card advantages-card-bottom">
-                                    <div class="advantages-card-block">
+                                    <div class="advantages-card-block card-shadow-two">
                                         <img class="advantages-card-image" src="img/home_announce/icons/evaluation.svg" alt="">
                                         <h5 class="advantages-card-description">Avaliação do imóvel presencial e online</h5>
                                     </div>
                                 </div>
                                 <div class="col-xl-3 col-md-6 advantages-card advantages-card-bottom">
-                                    <div class="advantages-card-block">
+                                    <div class="advantages-card-block card-shadow-two">
                                         <img class="advantages-card-image" src="img/home_announce/icons/security.svg" alt="">
                                         <h5 class="advantages-card-description">Segurança e suporte direto de especialistas</h5>
                                     </div>
@@ -544,7 +544,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-3 col-md-6 know-more-card">
-                            <div class="card">
+                            <div class="card card-shadow">
                                 <img src="img/home_announce/know-more-card_zero.png" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Quer saber mais?</h5>
@@ -560,7 +560,7 @@
                             </div>
                         </div>
                         <div class="col-xl-3 col-md-6 know-more-card">
-                            <div class="card">
+                            <div class="card card-shadow">
                                 <img src="img/home_announce/know-more-card_one.png" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Conheça os canais da Apolar</h5>
@@ -576,7 +576,7 @@
                             </div>
                         </div>
                         <div class="col-xl-3 col-md-6 know-more-card">
-                            <div class="card">
+                            <div class="card card-shadow">
                                 <img src="img/home_announce/know-more-card_two.png" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Seja um franqueado</h5>
@@ -592,7 +592,7 @@
                             </div>
                         </div>
                         <div class="col-xl-3 col-md-6 know-more-card">
-                            <div class="card">
+                            <div class="card card-shadow">
                                 <img src="img/home_announce/know-more-card_three.png" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Perguntas mais frequentes</h5>
@@ -608,7 +608,7 @@
                             </div>
                         </div>
                         <div class="col-xl-12 ">
-                            <div class="know-more-card-bottom">
+                            <div class="know-more-card-bottom card-shadow">
                                 <img src="img/home_announce/indication-img.png" class="know-more-bottom-image" alt="...">
                                 <div class="know-more-bottom-content">
                                     <div>
