--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Quer saber mais?</h5>
                                     <p class="card-text">Acesse o nosso blog para mais informações sobre como anunciar</p>
-                                    <a class="btn_default" href="">
+                                    <a class="btn_default" href="https://www.apolar.com.br/blog/" target="_blank">
                                         Saiba mais
                                         <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <rect x="0.777588" y="0.5" width="24" height="24" rx="12" fill="#EFEBE7"/>
@@ -565,7 +565,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Conheça os canais da Apolar</h5>
                                     <p class="card-text">Saiba tudo sobre compra, venda e aluguel de imóveis através dos nossos canais</p>
-                                    <a class="btn_default" href="">
+                                    <a class="btn_default" href="https://www.youtube.com/watch?v=0l5zn5_YDuw&list=PLAkgSOjsYybpeni8w2DacLGkvXHBscjso" target="_blank">
                                         Saiba mais
                                         <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <rect x="0.777588" y="0.5" width="24" height="24" rx="12" fill="#EFEBE7"/>
@@ -581,7 +581,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Seja um franqueado</h5>
                                     <p class="card-text">Seja um franqueado da maior rede imobiliária do sul do Brasil com mais de 20% de lucratividade.</p>
-                                    <a class="btn_default" href="">
+                                    <a class="btn_default" href="https://franqueadora.apolar.com.br/landing/" target="_blank">
                                         Saiba mais
                                         <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <rect x="0.777588" y="0.5" width="24" height="24" rx="12" fill="#EFEBE7"/>
@@ -597,7 +597,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Perguntas mais frequentes</h5>
                                     <p class="card-text">Veja as perguntas mais frequentes que nossos clientes procuram</p>
-                                    <a class="btn_default" href="">
+                                    <a class="btn_default" href="https://www.apolar.com.br/faq/" target="_blank">
                                         Saiba mais
                                         <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <rect x="0.777588" y="0.5" width="24" height="24" rx="12" fill="#EFEBE7"/>
@@ -615,7 +615,7 @@
                                         <h4 class="know-more-bottom-title">Indique um imóvel e ganhe R$ 150 </h4>
                                         <p class="know-more-bottom-text">Compartilhe seu link ou cadastre o contato do proprietário que iremos entrar em contato, assim que o imóvel for publicado você ganha R$150</p>
                                     </div>
-                                    <a class="btn_default" href="">
+                                    <a class="btn_default" href="https://www.apolar.com.br/indique" target="_blank">
                                         Indicar um imóvel
                                         <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <rect x="0.777588" y="0.5" width="24" height="24" rx="12" fill="#EFEBE7"/>
