--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                             </div>
                         </div>
                         <div class="col-xl-12 advantages-section-button">
-                            <a class="btn_default" href="https://anuncie.apolar.com.br/" target="_blank">
+                            <a class="btn_default" href="#contactUs">
                                 Quero anunciar
                                 <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <rect x="0.777588" y="0.5" width="24" height="24" rx="12" fill="#EFEBE7"/>
