update responsive and other fix

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
     <header class="header-default">
         <nav class="navbar navbar-expand-xl container">
-            <a class="navbar-brand" href="#"><img src="./img/home_announce/logo_header.png"></a>
+            <a class="navbar-brand" href="#"><img src="./img/home_announce/logo_header.svg"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -223,7 +223,7 @@
                                     </div>
                                     <div class="did-you-know-card-block-content">
                                         <div id="homeKnowChatCarosel" class="carousel slide carousel-fade"
-                                            data-ride="carousel">
+                                            data-ride="carousel" data-interval="4000">
                                             <div class="carousel-inner">
                                                 <div class="carousel-item active">
                                                     <p>Na Apolar, proprietários não pagam nada até o inquilino se mudar
@@ -263,8 +263,8 @@
                                     alt="">
                                 <div class="calculator-contact-content">
                                     <p><b>Precisa de ajuda?</b></p>
-                                    <p>Entre em contato com um de nossos especialistas <br> pelo telefone <a
-                                            href="">(41) 3320-5814</a></p>
+                                    <p>Entre em contato com um de nossos especialistas <br> pelo telefone <a href="tel+5541991210405">(41) 99121-0405</a>
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -794,7 +794,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-6">
-                    <img class="announce-footer-logo" src="img/home_announce/logo_footer.png" alt="">
+                    <img class="announce-footer-logo" src="img/home_announce/logo_footer.svg" alt="">
                     <p class="announce-footer-description">Os melhores imóveis em Curitiba e Região Metropolitana estão
                         na Apolar Imóveis, <a target="_blank" href="https://www.apolar.com.br/institucional">imobiliária em Curitiba</a> com mais
                         de 50 anos de atuação no mercado. Na Apolar você tem toda a segurança para
@@ -807,7 +807,7 @@
                 </div>
                 <div class="col-xl-6">
                     <div class="row">
-                        <div class="col-xl-6 col-md-6">
+                        <div class="col-xl-6 col-md-6 col-sm-6 col-xs-footer">
                             <div class="announce-footer-link">
                                 <h6 class="announce-footer-link-title">ENCONTRAR IMÓVEIS</h6>
                                 <ul class="announce-footer-link-list">
@@ -835,7 +835,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-xl-6 col-md-6">
+                        <div class="col-xl-6 col-md-6 col-sm-6 col-xs-footer">
                             <div class="announce-footer-link">
                                 <h6 class="announce-footer-link-title">INSTITUCIONAL</h6>
                                 <ul class="announce-footer-link-list">
@@ -864,7 +864,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-xl-6 col-md-6">
+                        <div class="col-xl-6 col-md-6 col-sm-6 col-xs-footer">
                             <div class="announce-footer-link">
                                 <h6 class="announce-footer-link-title">PROPRIETÁRIO</h6>
                                 <ul class="announce-footer-link-list">
@@ -880,7 +880,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-xl-6 col-md-6">
+                        <div class="col-xl-6 col-md-6 col-sm-6 col-xs-footer">
                             <div class="announce-footer-link">
                                 <h6 class="announce-footer-link-title">CONTATO</h6>
                                 <ul class="announce-footer-link-list">
@@ -904,7 +904,7 @@
                 <hr>
                 <div class="col-xl-12">
                     <div class="announce-footer-copyright">
-                        <p>2022 Copyright - Apolar Imóveis | Todos os direitos reservados</p>
+                        <p>&copy; 2024 Copyright - Apolar Imóveis | Todos os direitos reservados</p>
                     </div>
                 </div>
             </div>
