--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <section class="announce-main-section">
                 <div class="container">
                     <div class="row">
-                        <div class="col-xl-6 col-lg-7 announce-main-description white">
+                        <div class="col-xl-6 col-lg-7 col-md-12 col-sm-12 announce-main-description white">
                             <h1><b>Descubra o valor<br> real</b> do seu imóvel<br> anunciando na<br> Apolar</h1>
                             <h2>Fácil, rápido e seguro</h2>
                             <p>Confira os benefícios de<br> anunciar na Apolar</p>
